speed up startup time